# RoomPlanner

./: README.md  main.py  pyproject.toml  test.py
app/: roomplanner.py  visualizer.py
utest/: test_room_planner.py
