[tool.poetry]
name = "roomplanner"
version = "0.1.0"
description = "Алгоритм для автоматической расстановки мебели в спальне"
authors = ["Oleg <63945818+OlegShir@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^2.1.3"
matplotlib = "^3.9.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
